<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DroidRec</string>
    <string name="record_start">Start recording</string>
    <string name="record_stop">Stop recording</string>
    <string name="record_pause">Pause recording</string>
    <string name="record_resume">Continue recording</string>
    <string name="settings_title">Settings</string>
    <string name="capture_settings">Capture settings</string>
    <string name="quality_indicator_custom">Custom recording quality</string>
    <string name="quality_indicator_custom_description">Ignore automatic quality settings</string>
    <string name="quality_indicator">Recording quality</string>
    <string name="quality_indicator_description">Set quality</string>
    <string name="quality_normal">Normal</string>
    <string name="quality_low">Low</string>
    <string name="quality_lowest">Lowest</string>
    <string name="fps_indicator_custom">Custom FPS</string>
    <string name="fps_indicator_custom_description">Ignore automatic FPS settings</string>
    <string name="fps_indicator">Recording FPS</string>
    <string name="fps_indicator_description">Set custom frames per second</string>
    <string name="bitrate_indicator_custom">Custom bitrate</string>
    <string name="bitrate_indicator_custom_description">Ignore automatic bitrate settings</string>
    <string name="bitrate_indicator">Recording bitrate</string>
    <string name="bitrate_indicator_description">Set custom bitrate</string>
    <string name="codec_option">Choose custom codec</string>
    <string name="codec_option_description">Set custom codec</string>
    <string name="codec_option_auto">Default</string>
    <string name="dontnotifyonrotate_option">Don\'t notify on rotate</string>
    <string name="dontnotifyonrotate_option_description">Don\'t notify on new recording start when screen rotates</string>
    <string name="norotate_option">Don\'t restart recording on rotate</string>
    <string name="norotate_option_description">WARNING: If enabled, your video will lose quality after rotation!</string>
    <string name="controls_settings">Controls settings</string>
    <string name="floating_controls_option">Enable floating controls</string>
    <string name="floating_controls_option_description">Show floating controls panel</string>
    <string name="floating_controls_position">Floating controls position</string>
    <string name="floating_controls_position_description">Set floating controls position</string>
    <string name="floating_controls_position_notice">Tap the screen when complete</string>
    <string name="floating_controls_size">Floating controls size</string>
    <string name="floating_controls_size_description">Set floating controls size</string>
    <array name="floating_controls_size_preferences">
        <item name="floating_controls_size_option_large">Large</item>
        <item name="floating_controls_size_option_normal">Normal</item>
        <item name="floating_controls_size_option_small">Small</item>
        <item name="floating_controls_size_option_little">Little</item>
    </array>
    <string name="floating_controls_opacity">Floating controls opacity</string>
    <string name="floating_controls_opacity_description">Set floating controls opacity</string>
    <string name="dark_theme_option">Use dark theme</string>
    <string name="dark_theme_option_description">Set dark theme preferences</string>
    <array name="dark_theme_option_preferences">
        <item name="dark_theme_option_dark">Dark</item>
        <item name="dark_theme_option_light">Light</item>
        <item name="dark_theme_option_auto_item">Automatic</item>
    </array>
    <string name="dark_theme_change_notice">Reopen the application to apply theme</string>
    <string name="overlay_notice_title">Display over other apps</string>
    <string name="overlay_notice_description">To show floating controls, enable Drawing over other apps permission</string>
    <string name="overlay_notice_button">Open settings</string>
    <string name="recording_tile">Record screen</string>
    <string name="recording_started_title">Recording screen</string>
    <string name="recording_started_text">Screen recording in process</string>
    <string name="recording_paused_title">Recording paused</string>
    <string name="recording_paused_text">Screen recording paused</string>
    <string name="recording_finished_title">Recording finished</string>
    <string name="recording_finished_text">Screen recording complete</string>
    <string name="recording_rotated_title">Screen rotated</string>
    <string name="recording_rotated_text">New recording started</string>
    <string name="audio_playback_unavailable">Audio Playback recording requires Android 10 or later</string>
    <string name="notifications_channel">Recording notifications</string>
    <string name="notifications_stop">Stop</string>
    <string name="notifications_pause">Pause</string>
    <string name="notifications_resume">Continue</string>
    <string name="notifications_share">Share</string>
    <string name="notifications_delete">Delete</string>
    <string name="error_storage_select_folder">Error: Select recordings folder</string>
    <string name="error_audio_required">Error: Allow recording audio</string>
    <string name="error_invalid_folder">Error: Invalid recordings folder</string>
    <string name="error_recorder_failed">Error: Recording failed</string>
    <string name="error_recorder_codec_error">Error: Codec error</string>
    <string name="setting_recordings_folder">Change recordings folder</string>
    <string name="setting_record_type_video">Video</string>
    <string name="setting_record_type_audio">Audio only</string>
    <string name="setting_audio_record_microphone_sound">Record microphone</string>
    <string name="setting_audio_record_playback_sound">Record audio</string>
</resources>
